--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,25 +11,19 @@
         android:layout_width="150dp"
         android:layout_height="50dp"
         android:layout_marginTop="4dp"
-        android:scaleType="centerInside"
         android:adjustViewBounds="true"
-        android:src="@drawable/ic_launcher_background"/>
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_gravity="bottom"
-        android:text="@string/start" />
+        android:clickable="true"
+        android:focusable="true"
+        android:scaleType="centerInside"
+        android:src="@drawable/ic_launcher_background" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="76dp"
         android:layout_height="39dp"
-        android:layout_marginStart="270dp"
         android:layout_gravity="bottom"
-        android:textSize="20sp"/>
+        android:layout_marginStart="270dp"
+        android:textSize="20sp" />
 
 
 </FrameLayout>
